[gd_scene load_steps=4 format=3 uid="uid://dsp6cve3hn4tn"]

[ext_resource type="Script" path="res://scipts/login_menu.gd" id="1_grfim"]
[ext_resource type="AudioStream" uid="uid://da11n77gyim7d" path="res://Sounds/FUI Holographic Button Press-1.wav" id="2_g0slo"]

[sub_resource type="SystemFont" id="SystemFont_qg5ip"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grfim")

[node name="Username" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 210.0
offset_right = 749.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Usuario"

[node name="Password" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 286.0
offset_right = 749.0
offset_bottom = 346.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Contrasena"

[node name="Login" type="Button" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 381.0
offset_right = 570.0
offset_bottom = 441.0
theme_override_fonts/font = SubResource("SystemFont_qg5ip")
theme_override_font_sizes/font_size = 30
text = "Login"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 549.0
offset_top = 455.0
offset_right = 699.0
offset_bottom = 515.0
theme_override_font_sizes/font_size = 30
text = "Cerrar"

[node name="Create" type="Button" parent="."]
layout_mode = 0
offset_left = 609.0
offset_top = 380.0
offset_right = 829.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 30
text = "Crear Cuenta"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 571.0
offset_top = 56.0
offset_right = 672.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 50
text = "TBD"

[node name="btnPressedError" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g0slo")
volume_db = 15.0

[connection signal="button_down" from="Login" to="." method="_on_login_button_down"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="button_down" from="Create" to="." method="_on_create_button_down"]
